--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.5.3",
+    "ngx-currency": "^1.5.1",
     "ngx-webcam": "^0.2.2",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.4.0",
