--- a/proxyconfig.json
+++ b/proxyconfig.json
@@ -52,6 +52,15 @@
       "pathRewrite": {
         "^/commentsData": ""
       }
+    },
+    "/api/*": {
+      "target": "http://127.0.0.1:3000/api",
+      "secure": false,
+      "logLevel": "debug",
+      "changeOrigin": true,
+      "pathRewrite": {
+        "^/api": ""
+      }
     }
   }
   
