--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "html2canvas": "^1.0.0-alpha.12",
     "jspdf": "^1.5.3",
     "ng-currency-format": "^0.1.6",
+    "ng-mat-search-bar": "^3.0.1",
     "ngx-currency": "^1.5.1",
+    "ngx-mat-select-search": "^1.5.2",
     "ngx-webcam": "^0.2.2",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.4.0",
