--- a/proxyconfig.json
+++ b/proxyconfig.json
@@ -54,7 +54,7 @@
       }
     },
     "/api/*": {
-      "target": "http://127.0.0.1:3000/api",
+      "target": "http://127.0.0.1:3000",
       "secure": false,
       "logLevel": "debug",
       "changeOrigin": true,
