--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@types/chart.js": "^2.7.40",
     "angular-bootstrap-md": "^7.4.1",
+    "angular5-csv": "^0.2.11",
     "chart.js": "^2.7.2",
     "core-js": "^2.5.4",
     "font-awesome": "~4.7.x",
